Thu Jan 26 17:32:54 1995  Stu Grossman  (grossman@cygnus.com)

	* sparcl-tdep.c:  Clean up formatting and indentation.

Thu Jan 26 10:49:59 1995  Steve Chamberlain  <sac@splat>

	* remote-hms.c (hms_ops): Change ref of hr_load_image
	to gr_load_image.
	(dcache_flush, dcache_hit, dcache_value, dcache_fetch,
	dcache_poke, dcache_init):  Deleted.
	(hms_open, hms_resume, hms_fetch_word, hms_store_word):
	Use dcache routines provided by remote-util.h

Thu Jan 26 12:08:31 1995  Michael Meissner  <meissner@cygnus.com>

	* configure.in: Add support for powerpc-*-eabi.

	* powerpc/tm-ppc-eabi.h, powerpc/pcc-eabi.mt: New files for
	PowerPC support.

Wed Jan 25 18:13:14 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* language.h (struct language_defn):  New field c_style_arrays.
	* language.c (unknown_language_defn, auto_language_defn,
	local_language_defn), c-lang.c (c_language_defn, cplus_language_defn,
	asm_language_defn):  Set c_style_arrays to true.
	* m2-lang.c (m2_language_defn), ch-lang.c (chill_language_defn),
	f-lang.c (f_language_defn):  Set c_style_arrays to false.
	* valops.c (value_string):  If c_style_array is not set,
	allocate string in gdb (not inferior) using allocate_value.

	* value.h (COERCE_ARRAY), valops.c (value_addr, value_arg_coerce):
	Only call value_coerce_array if current_language->c_style_arrays.
	* values.c:  Add #include "language.h".  (Needed for COERCE_ARRAY.)

	* valops.c (chill_varying_type):  New predicate.
	* valops.c (value_cast):  Support assigning a fixed string or array
	to a variable string/array structure.

	* valarith.c (value_subscripted_rvalue):  Extra parameter lowerbound.
	Check index>=lowerbound, and then add lowerbound to index here,
	instead of in caller.  Generalize to arbitrary lval_types.
	(value_subscript):  Use enhanced value_subscripted_rvalue if
	c_style_arrays is false (and index is in range).

Wed Jan 25 18:23:46 1995  Stu Grossman  (grossman@cygnus.com)
